mints/mints/mtx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtx-ui-service
spec:
  type: NodePort
  selector:
    app: mtx-ui-service
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
