mints/mints/nginx-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mints-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mints.cf
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-deployment
          servicePort: 80
      - path: /hello
        backend:
          serviceName: my-mc-service
          servicePort: 60001
      - path: /mintsui/*
        backend:
          serviceName: mints-ui-service
          servicePort: 3000
      - path: /kafka
        backend:
          serviceName: kafka-manager
          servicePort: 9000
      - path: /mtxui/*
        backend:
          serviceName: mtx-ui-service
          servicePort: 4000
      - path: /apple
        backend:
          serviceName: apple-service
          servicePort: 5678
