mints/mints/test-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - mints.cf
    secretName: tls-secret
  rules:
    - host: mints.cf
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: activemq-artemis
                port:
                  number: 8161
